--- a/app/assets/stylesheets/reports.css.scss
+++ b/app/assets/stylesheets/reports.css.scss
@@ -1,3 +1,7 @@
 // Place all the styles related to the Reports controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+#q_roles_id_in_chzn {
+	vertical-align: middle !important;
+}
